test-cases/negative/test_074_while_without_condition.lay
# negative test: while loop without condition
# expected: parser should reject this

while do
  print 'hello'
end while


